--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.13",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^4.35.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
